<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_SystemStatus_ARR" Id="{564efa8d-ad95-4379-9836-bdc75eceee8b}">
    <Declaration><![CDATA[TYPE
  ST_SystemStatus_ARR : REFERENCE TO ARRAY [0..C.uiNumIrrLinesForHMI_C] OF ST_SystemStatus;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>