<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="C" Id="{0308330d-e4af-4094-9b92-88c207c3c970}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT 
  uiNumIrrLinesForHMI_C         : UINT := 1;//how many robots are handled by a single PLC/HMI
  uiNumIrrLinesInGreenhouse_C   : UINT := 2;//2 Telegram BOT, one for each line or bay or span of the greenhouse, selected based on line number

  tTimeOutAxisMC_C            : TIME := T#5S;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>